hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_001.php.expectf
*** Testing base64_decode() : usage variations ***
Error: 8 - Undefined variable: undefined_var, %s(%d)
Error: 8 - Undefined variable: unset_var, %s(%d)

-- Arg value 0 --
string(0) ""

-- Arg value 1 --
string(0) ""

-- Arg value 12345 --
string(6) "d76df8"

-- Arg value -2345 --
bool(false)

-- Arg value 10.5 --
bool(false)

-- Arg value -10.5 --
bool(false)

-- Arg value 10.1234567e10 --
string(18) "d74d76df8e7aef4d34"

-- Arg value 10.7654321E-10 --
bool(false)

-- Arg value .5 --
bool(false)

-- Arg value array() --

Warning: base64_decode() expects parameter 1 to be string, array given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value array(0) --

Warning: base64_decode() expects parameter 1 to be string, array given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value array(1) --

Warning: base64_decode() expects parameter 1 to be string, array given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value array(1, 2) --

Warning: base64_decode() expects parameter 1 to be string, array given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value array('color' => 'red', 'item' => 'pen' --

Warning: base64_decode() expects parameter 1 to be string, array given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value NULL --
string(0) ""

-- Arg value null --
string(0) ""

-- Arg value true --
string(0) ""

-- Arg value false --
string(0) ""

-- Arg value TRUE --
string(0) ""

-- Arg value FALSE --
string(0) ""

-- Arg value "" --
string(0) ""

-- Arg value '' --
string(0) ""

-- Arg value stdClass object --

Warning: base64_decode() expects parameter 1 to be string, object given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value undefined variable --
string(0) ""

-- Arg value unset variable --
string(0) ""

-- Arg value resource --

Warning: base64_decode() expects parameter 1 to be string, resource given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL
===Done===
